--- a/css/cssContact.css
+++ b/css/cssContact.css
@@ -1,8 +1,13 @@
+.textArea {
+  resize: none;
+}
 .contact__btn {
   float: right;
+  margin: 1em 0 1em 0;
 }
 .contact__btnC {
   float: left;
+  margin: 1em 0 1em 0;
 }
 .contact__h1 {
   margin-bottom: 1.3em;
