--- a/css/cssContact.less
+++ b/css/cssContact.less
@@ -1,9 +1,15 @@
+.textArea {
+  resize: none;
+}
+
 .contact__btn {
   float: right;
+  margin: 1em 0 1em 0;
 }
 
 .contact__btnC {
   float: left;
+  margin: 1em 0 1em 0;
 }
 
 .contact__h1 {
