--- a/css/cssPortfolio.css
+++ b/css/cssPortfolio.css
@@ -1,13 +1,18 @@
-.slider__li {
-  cursor: pointer;
-}
-.slider__h1 {
+.portfolio__h1 {
   margin-bottom: 1.3em;
+  margin-top: 1em;
+  font-size: 1.8em;
 }
-.slider__p {
-  float: right;
+/* bootstrap MD col */
+@media (min-width: 768px) {
+  .portfolio__h1 {
+    font-size: 2.2em;
+  }
 }
-.slider__g {
-  float: left;
+/*bootstrap LG col */
+@media (min-width: 992px) {
+  .portfolio__h1 {
+    font-size: 2.4em;
+  }
 }
 /*# sourceMappingURL=cssPortfolio.css.map */
